# gaofen-parser

./: README.md  pyproject.toml  setup.cfg  setup.py  test.py
satellite_parser/: __init__.py  gf1c.py  gf1d.py  gf2.py  sv101.py
src/satellite_parser/: base.py  constants.py  gf1.py  gf1b.py  gf2.py  gf3.py  gf4.py  gf5.py  gf6.py  gf7.py  sv101.py  sv102.py  sv103.py  sv104.py
