[metadata]
name = satellite-parser
version = 0.2.4
author = chinesejar
author_email = chinesejar@gmail.com
description = parsing origin data of remote sensor satellites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chinesejar/satellite-parser
project_urls =
    Bug Tracker = https://github.com/chinesejar/satellite-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires= xmltodict>=0.12.0
python_requires = >=3.6

[options.packages.find]
where = src